some code reorganization
